syntax = "proto3";

package server;

option go_package = "github.com/martinmhan/crud-api-golang-grpc/api";

service API {
  rpc createItem(ItemFields) returns (SimpleMessage) {}
  rpc readAllItems(SimpleMessage) returns (Items) {}
  rpc readItem(ItemID) returns (Item) {}
  rpc updateItem(Item) returns (SimpleMessage) {}
  rpc deleteItem(ItemID) returns (SimpleMessage) {}
}

message SimpleMessage {
  string message = 1;
}

message Item {
  string ID = 1;
  string Name = 2;
}

message Items {
  repeated Item items = 1;
}

message ItemFields {
  string Name = 1;
}

message ItemID {
  string ID = 1;
}
